[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_models"
version = "0.1.0"
description = "Energy Modelling Tool Kit - Python implementations of EnergyPlus components"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Mert Ersoz", email = "numersoz@hotmail.com"}
]
maintainers = [
    {name = "Mert Ersoz", email = "numersoz@hotmail.com"}
]
keywords = [
    "energy modeling",
    "building simulation",
    "HVAC",
    "EnergyPlus",
    "fans",
    "curves",
    "scheduler",
    "building energy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.0.0; python_version<'3.10'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pre-commit>=2.20"
]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=8.0",
    "mkdocstrings[python]>=0.20"
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=6.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/energy_models"
Documentation = "https://github.com/yourusername/energy_models#readme"
Repository = "https://github.com/yourusername/energy_models"
"Bug Tracker" = "https://github.com/yourusername/energy_models/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["energy_models*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
energy_models = ["*.md", "**/*.md"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["energy_models"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false